@@ -1,7 +1,15 @@
+
+
+31 July 2018 - 
+        Cracked the shareable urls
+        Starting to populate and style the website
+        Added random images to home page and news pages.
+        
 30 July 2018 - What I Did today
         Spent the entire day working on the shareable urls
         Made a breakthrough towards the end of the end of the day that will allow me to proceed
         Will develop more tommorow.
+
 26 July 2018 - What I Did today:
         ✔ Figured out how to add a new line to JSON data.
         ✔ Made some progress with Unique IDs but hit some roadblocks. I feel like I am so close to a breakthrough
